# bitcoinOS

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FUNDING.json  README.md  bitcoin.conf  canister_ids.json  code-of-conduct.md  contributing.md  dfx.json  justfile  package-lock.json  package.json
canisters/dbank/: Cargo.toml  README.md  dbank.did
canisters/dbank/src/: error.rs  lib.rs
canisters/dbank/src/api/: balance_of.rs  count_wallet.rs  counter_increment_one.rs  create_p2pkh_wallet.rs  create_p2wpkh_wallet.rs  current_fee_percentiles.rs  ecdsa_key.rs  list_wallet.rs  mod.rs  p2pkh_address.rs  p2wpkh_address.rs  public_key.rs  staking_to_pool.rs  staking_to_pool_from_p2wpkh.rs  transfer_from_p2pkh.rs  transfer_from_p2wpkh.rs  tx_log_of.rs  (+4 more)
canisters/os/: Cargo.toml  README.md  os.did
canisters/os/src/: constants.rs  error.rs  lib.rs
canisters/os/src/api/: add_controller.rs  append_wallet_action.rs  bind_wallet.rs  check_wallet_bind_user.rs  confirm_staking_record.rs  count_wallet.rs  counter_increment_one.rs  create_dbank_canister.rs  create_staking_pool.rs  create_user.rs  create_wallet.rs  create_wallet_canister.rs  create_wallet_owner.rs  current_dbank.rs  get_bind_wallet.rs  get_canister_module.rs  get_staking_record.rs  get_user_count.rs  get_user_info.rs  get_wallet_action.rs  install_staking_pool_wasm.rs  list_dbank.rs  list_staking_pool.rs  list_staking_record.rs  list_wallet.rs  list_wallet_types.rs  login_or_create_user.rs  mod.rs  my_wallet.rs  redeemed_staking_record.rs  register_canister_module.rs  register_staking_record.rs  registry_dbank.rs  registry_staking_pool.rs  registry_wallet.rs  set_steward_canister.rs  set_steward_canister_of_wallet.rs  set_wallet_cycles.rs  staking_pool_increment_one.rs  tvl.rs  (+13 more)
canisters/os/src/context/: memory.rs  mod.rs
canisters/os/src/domain/: mod.rs  request.rs
canisters/os/src/repoistories/: mod.rs  wallet_action_stable.rs  wallet_owner_stable.rs
canisters/os/src/repositories/: canister_module.rs  counter.rs  dbank_info.rs  metadata.rs  mod.rs  staking_pool.rs  staking_pool_counter.rs  staking_record.rs  user.rs  wallet_bind.rs  wallet_counter.rs  wallet_info.rs  wallet_log.rs  wallet_owner.rs
canisters/os/src/services/: append_wallet_action.rs  count_wallet.rs  get_wallet_action.rs  insert_wallet_owner.rs  list_wallet.rs  mod.rs
canisters/point/: Cargo.toml  point.did
canisters/point/src/: constants.rs  error.rs  lib.rs
canisters/smartwallet/: Cargo.toml  README.md  smartwallet.did  wallet copy.did  wallet.did
canisters/smartwallet/src/: error.rs  lib.rs
canisters/smartwallet/src/api/: all_addresses.rs  balance.rs  build_transaction.rs  build_transaction_multisig22.rs  build_transaction_with_multisig22_p2wsh.rs  build_transaction_with_single_p2wsh.rs  confirm_staking_record_one.rs  counter_increment_one.rs  current_fee_percentiles.rs  ecdsa_key.rs  get_ecdsa_key.rs  get_or_create_multisig22_wallet_address.rs  get_or_create_single_p2wsh_wallet.rs  get_or_create_wallet_address.rs  get_staking.rs  list_staking.rs  list_wallet.rs  logs.rs  mod.rs  my_staked_pools.rs  p2pkh_address.rs  p2wpkh_address.rs  p2wsh_multisig22_address.rs  p2wsh_single_address.rs  public_key.rs  register_ecdsa_key.rs  register_staking.rs  register_staking_record.rs  set_steward_canister.rs  staking_to_pool.rs  staking_to_pool_from_p2wsh_multisig22.rs  sync_staking_record_status.rs  total_staking.rs  transfer_from_multisig22.rs  transfer_from_p2pkh.rs  transfer_from_p2wpkh.rs  transfer_from_p2wsh.rs  transfer_from_p2wsh_multisig22.rs  transfer_multisig22.rs  transfer_to_p2pkh.rs  (+3 more)
canisters/smartwallet/src/bitcoin/: mod.rs
canisters/smartwallet/src/constants/: mod.rs
canisters/smartwallet/src/context/: memory.rs  mod.rs
canisters/smartwallet/src/domain/: mod.rs  request.rs  response.rs
canisters/smartwallet/src/repositories/: counter.rs  metadata.rs  mod.rs  staking_record.rs  tx_log.rs  wallet.rs
canisters/smartwallet/src/rgb/: mod.rs
canisters/stake/: Cargo.toml  stake.did
canisters/stake/src/: constants.rs  error.rs  lib.rs
canisters/stake/src/api/: get_all_stake_nft.rs  get_stake_nft.rs  get_user_stake_nft.rs  mod.rs  stake_nft.rs  unstake_nft.rs
canisters/stake/src/context/: memory.rs  mod.rs
canisters/stake/src/domain/: mod.rs  nft_types.rs  request.rs
canisters/stake/src/repositories/: metadata.rs  mod.rs  stake_nft.rs
canisters/stake/src/utils/: mod.rs
canisters/stakingpool/: Cargo.toml  README.md  stakingpool.did
canisters/stakingpool/src/: error.rs  lib.rs
canisters/stakingpool/src/api/: balance.rs  confirm_staking_record.rs  confirm_staking_record_one.rs  current_fee_percentiles.rs  get_staking.rs  list_staking.rs  list_staking_by_wallet.rs  logs.rs  mod.rs  p2pkh_address.rs  p2wsh_multisig22_address.rs  public_key.rs  redeem.rs  redeem_from_p2wsh_multisig22.rs  redeemed_staking_record.rs  register_staking.rs  register_staking_record.rs  set_steward_canister.rs  staker_save.rs  staking_record_sync_to_os.rs  transfer_from_p2pkh.rs  transfer_from_p2wsh_multisig22.rs  tvl.rs  update_staking_pool_info.rs  update_staking_pool_status.rs  utxos.rs
canisters/stakingpool/src/constants/: mod.rs
canisters/stakingpool/src/context/: memory.rs  mod.rs
canisters/stakingpool/src/domain/: mod.rs  request.rs  response.rs
canisters/stakingpool/src/repositories/: counter.rs  metadata.rs  mod.rs  staker.rs  staking_record.rs  tx_log.rs  wallet.rs
canisters/stakingpool/src/rgb/: mod.rs
canisters/steward/: Cargo.toml  README.md  steward.did
canisters/steward/src/: error.rs  lib.rs
canisters/steward/src/api/: ecdsa_key.rs  finalize_tx_and_send.rs  get_ecdsa_key.rs  mod.rs  public_key.rs  register_ecdsa_key.rs  update_ecdsa_key.rs  update_public_key.rs
canisters/steward/src/constants/: mod.rs
canisters/steward/src/context/: mod.rs
canisters/steward/src/domain/: mod.rs  response.rs
scripts/: command.sh  did.sh  install-ic.sh
src/bitcoinOS_frontend/: index.html  package.json  theme.js  tsconfig.json  vite.config.js
src/bitcoinOS_frontend/src/: App.jsx  global.d.ts  index.scss  main.jsx
(+137 files in other folders)
