[workspace]
members = [
    "canisters/*",
    "packages/*",
]

resolver = "2"

[workspace.dependencies]
# for ICP
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.9"
ic-ledger-types = "0.10"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6"
ciborium = "0.2"

# for Bitcoin
bitcoin = { version = "0.31", features = ["std", "no-std"] }
core2 = "0.4"
getrandom = { version = "0.2", features = ["js"] }
maybe-async = "0.2"
miniscript = { version = "11.0", features = ["std", "no-std"] }

# for RGB
aluvm = "0.11.0-beta.4"
amplify = "4.6.0"
bp-core = "0.11.0-beta.4"

rgb-std = { version = "0.11.0-beta.4", features = ["serde"] }
rgb-schemata = "0.11.0-beta.4"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
strict_encoding = "2.7.0-beta.1"
strict_types = "2.7.0-beta.1"
thiserror = "1"
zeroize = "1.7"
zeroize_derive = "1.4"

[patch.crates-io]
bp-consensus = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
bp-dbc = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
bp-seals = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
bp-core = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
commit_verify = { git = "https://github.com/LNP-BP/client_side_validation", branch = "master" }
rgb-core = { git = "https://github.com/RGB-WG/rgb-core",  branch = "master" }
rgb-std = { git = "https://github.com/RGB-WG/rgb-std",  branch = "master" }
rgb-schemata = { git = "https://github.com/RGB-WG/rgb-schemata", branch = "master" }

[profile.release]
debug = 0
lto = "off"
