[workspace]
members = [
    "canisters/*", "packages/icrc-helper",
    "packages/wallet",
]

resolver = "2"

[workspace.dependencies]
# for ICP
candid = "0.10"
ic-cdk = "0.15"
ic-cdk-macros = "0.15"
ic-ledger-types = "0.12"
ic-cdk-timers = "0.9" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6"
ic-wasi-polyfill = "0.5.0"
icrc-ledger-agent = { git = "https://github.com/dfinity/ic", package = "icrc-ledger-client", branch = "master" }


ciborium = "0.2"

# for Bitcoin
bitcoin = { version = "0.32", features = ["std"] }
bs58 = "0.5"
core2 = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
maybe-async = "0.2"
miniscript = { version = "12.0", features = ["std"] }

# amplify = "4.6.0"
ripemd = "0.1"

serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
thiserror = "1"
# zeroize = "1.7"
# zeroize_derive = "1.4"
serde_bytes = "0.11"


[profile.release]
debug = 0
lto = "off"
